Couple of updates

--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -23,5 +23,8 @@
     </tbody>
   </table>
 
-  <%= link_to "Nuevo Autor", new_author_path %>
+  <br />
+
+  <%= link_to "Nuevo Autor", new_author_path %><br />
+  <%= link_to "Ver Libros", books_path %>
 </div>
