--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,5 +25,8 @@
     </tbody>
   </table>
 
-  <%= link_to "Nuevo Libro", new_book_path %>
+  <br />
+
+  <%= link_to "Nuevo Libro", new_book_path %><br />
+  <%= link_to "Ver Autores", authors_path %>
 </div>
