--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
-<h2><%= @book.title %></h2>
-<h2><%= @book.isbn %></h2>
-<h2><%= @book.author.name %></h2>
+<h2>Título: <%= @book.title %></h2>
+<h2>ISBN: <%= @book.isbn %></h2>
+<h2>Autor: <%= @book.author.name %></h2>
 
 <%= link_to "Ver Libros", books_path %>
